the upcoming holidays worldwide is shown on home-page

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -27,6 +27,14 @@
   background-color: antiquewhite;
 }
 
+.holiday-card {
+  background-color: blanchedalmond;
+}
+
 .full-width {
   flex-basis: 100%;
+}
+
+.flex-min-height {
+  align-self: flex-start;
 }
